fix: 新增商户权限集合问题